$NetBSD: CHANGES-2010,v 1.4197 2010/12/07 01:37:17 reed Exp $

Changes to the packages collection and infrastructure in 2010:

	Updated textproc/mdoclint to 1.4 [wiz 2010-01-01]
	Updated net/ntop to 3.3.10nb1 [tron 2010-01-01]
	Updated net/libtorrent to 0.12.6 [snj 2010-01-01]
	Updated net/rtorrent to 0.8.6 [snj 2010-01-01]
	Updated misc/py-anita to 1.9 [gson 2010-01-02]
	Updated net/rsync to 3.0.7 [tron 2010-01-02]
	Updated www/ikiwiki to 3.20100102.3 [schmonz 2010-01-03]
	Updated www/trac to 0.11.6 [gdt 2010-01-03]
	Removed www/firefox-bin-nightly [joerg 2010-01-04]
	Removed mail/thunderbird-bin-nightly [joerg 2010-01-04]
	Updated audio/ampache to 3.5.3 [abs 2010-01-04]
	Updated shells/osh to 20091218 [wiz 2010-01-05]
	Updated net/tor to 0.2.1.21 [wiz 2010-01-05]
	Updated graphics/kdegraphics4 to 4.3.4nb2 [wiz 2010-01-05]
	Updated audio/lame to 3.98.2nb1 [tron 2010-01-05]
	Updated multimedia/ffmpeg to 20090611nb5 [tron 2010-01-05]
	Updated converters/kcc to 2.3 [obache 2010-01-06]
	Updated games/blokus to 1.1 [obache 2010-01-06]
	Updated cad/eagle to 4.16r2 [obache 2010-01-06]
	Updated www/ja-trac to 0.11.5pl1nb1 [obache 2010-01-06]
	Removed print/ghostscript-esp [joerg 2010-01-06]
	Updated mail/getmail to 4.16.0 [schmonz 2010-01-07]
	Updated emulators/fmsx to 3.5.1 [obache 2010-01-07]
	Updated fonts/mftrace to 1.2.15 [obache 2010-01-07]
	Updated x11/xsnow to 1.42nb4 [is 2010-01-07]
	Updated games/xpilot to 4.5.4nb3 [is 2010-01-07]
	Updated net/p5-eBay-API to 0.25nb2 [sno 2010-01-08]
	Updated devel/scmgit-base to 1.6.4nb1 [wiz 2010-01-09]
	Updated archivers/lha to 114.9nb4 [dholland 2010-01-09]
	Updated lang/ruby18-base to 1.8.7.174nb3 [taca 2010-01-10]
	Updated wm/openbox to 3.4.10 [snj 2010-01-10]
	Updated devel/imake to 1.0.2nb3 [tron 2010-01-10]
	Updated sysutils/py-notify to 0.1.1nb3 [obache 2010-01-11]
	Updated net/libfetch to 2.27 [joerg 2010-01-11]
	Updated pkgtools/createbuildlink to 3.16 [wiz 2010-01-13]
	Updated www/typo3 to 4.3.1 [taca 2010-01-14]